--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -54,9 +54,11 @@ jobs:
         uses: conda-incubator/setup-miniconda@v3
         with:
           activate-environment: anaconda-client-env
-          channel-priority: strict
           python-version: ${{ matrix.python-version }}
           use-only-tar-bz2: true # IMPORTANT: This needs to be set for caching to work properly!
+          mamba-version: "*"
+          channels: conda-forge,defaults
+          channel-priority: true
 
       - name: Install gdal
         run: conda install -y -c conda-forge gdal
